crates/mcp-apollo-registry/src/uplink/snapshots/mcp_apollo_registry__uplink__schema__tests__schema_by_url_all_fail@logs.snap
---
source: crates/mcp-apollo-registry/src/uplink/schema.rs
expression: yaml
---
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
- fields: {}
  level: ERROR
  message: failed to fetch supergraph schema from all urls
